examples/bad/BadSemicolon.vv
-- A program demonstrating the missing semicolon

import Type ;;

main : U 2 ;
main = U 1